Fixed the issue of off-center select option labels in FF. Issue of different height of line when empty option selected  in FF persists.

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocEnumValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocEnumValue.css
@@ -4,7 +4,6 @@ span.bocEnumValue,
 div.bocEnumValue.readOnly
 {
   display: inline-flex;
-  align-items: center;
   width: var(--remotion-themed-control-width);
   min-height: var(--remotion-themed-min-height);
 }
